--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,8 @@
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "scss",
+          "changeDetection": "OnPush"
         }
       },
       "root": "projects/ts-etl-ui",
@@ -82,8 +83,8 @@
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "lintFilePatterns": [
-              "src/**/*.{ts,html}",
-              "schematics/**/*.ts"
+              "projects/ts-etl-ui/**/*.ts",
+              "projects/ts-etl-ui/**/*.html"
             ]
           }
         }
@@ -91,6 +92,9 @@
     }
   },
   "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
     "analytics": "01302b77-9ae6-43d5-8a3b-07ddfdd186f1"
   }
 }
