--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "types": [
+      "jasmine",
+      "node"
+    ],
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
