--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "url": "http://localhost:4200/"
     },
     {
-      "name": "ng test",
+      "name": "start mock api server",
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: test",
