--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,7 @@
     },
     {
       "type": "npm",
-      "script": "test",
+      "script": "serve",
       "isBackground": true,
       "problemMatcher": {
         "owner": "typescript",
