--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "types": [
-      "jasmine",
-      "node"
+      "jasmine"
     ],
     "useDefineForClassFields": false,
     "lib": [
