--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "serve": "ng serve",
     "start": "npm run mock:server",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
