--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "mock:server": "node server/server.js"
   },
-  "private": true,
+  "private": false,
   "engines": {
     "node": ">=18",
     "npm": ">=9"
