--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ts-etl-ui",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
     "start": "node server/server.js",
     "prebuild": "npm --no-git-tag-version version patch",
-    "build": "ng build -c development",
+    "build": "ng build -c development && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "prepare": "husky"
