--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -22,12 +22,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          
+
       - name: Install dependencies
         run: npm ci
   
-      - name: Start Node Mocking API Server
-        run: npm run start
+      - name: Build Angular
+        run: npm run build
   
       - name: Run Playwright tests
         run: npm run test
