--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -25,7 +25,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-  
+
+      - name: Grant git permission
+        run: git config --global --add safe.directory /__w/ts-etl-ui/ts-etl-ui
+        
       - name: Build Angular
         run: npm run build
   
