--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
     "express": "^4.19.2",
+    "file-saver": "^2.0.5",
     "rxjs": "~7.5.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@angular/material": "^17.0.1",
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.12",
+    "@types/file-saver": "*",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
