--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ts-etl-ui",
   "version": "0.0.2",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
@@ -30,6 +31,7 @@
     "@angular/router": "^17.0.3",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
+    "node-fetch": "^3.3.2",
     "rxjs": "~7.5.0"
   },
   "devDependencies": {
@@ -45,7 +47,7 @@
     "@angular/material": "^17.0.1",
     "@playwright/test": "^1.44.0",
     "@types/node": "^20.12.12",
-    "@types/file-saver": "*",
+    "@types/file-saver": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
