--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "private": true,
   "engines": {
-    "node": ">=20",
+    "node": ">=20 <21",
     "npm": ">=10"
   },
   "dependencies": {
