--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,24 +1,38 @@
 {
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-  "version": "0.2.0",
-  "configurations": [
-    {
-      "command": "npm run serve",
-      "name": "Angular CLI Server",
-      "request": "launch",
-      "type": "node-terminal"
-  },
-  {
-    "command": "npm run start",
-    "name": "Node Mocking API Server",
-    "request": "launch",
-    "type": "node-terminal"
-  },
-  {
-    "command": "npm run test:debug",
-    "name": "Playwright test debug",
-    "request": "launch",
-    "type": "node-terminal"
-  }
-]
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "API Mocking Server",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceRoot}/",
+            "runtimeArgs": [
+                "run-script", "start"
+            ],
+            "runtimeExecutable": "npm",
+        },
+        {
+            "name": "Angular CLI Server",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceRoot}/",
+            "runtimeArgs": [
+                "run-script", "serve"
+            ],
+            "runtimeExecutable": "npm",
+        },
+        {
+            "name": "Debug Playwright Test",
+            "type": "node",
+            "request": "launch",
+            "cwd": "${workspaceRoot}/",
+            "runtimeArgs": [
+                "run-script", "test:debu"
+            ],
+            "runtimeExecutable": "npm",
+        },
+    ]
 }
