--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "ts-etl-ui",
   "version": "0.0.2",
   "type": "module",
+  "main": "server/server.js",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
-    "start": "node server/server.js",
+    "start": "node --env-file=.development.env server/server.js",
+    "start:ci": "PR=${{ github.event.number }} node --env-file=.ci.env server/server.js",
     "prebuild": "npm --no-git-tag-version version patch",
     "build": "ng build -c development && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
