--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "serve": "ng serve",
     "start": "node --env-file=.development.env server/server.js",
-    "start:ci": "PR=${{ github.event.number }} node --env-file=.ci.env server/server.js",
+    "start:ci": "node --env-file=.ci.env server/server.js",
     "prebuild": "npm --no-git-tag-version version patch",
     "build": "ng build -c development && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
