--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: Remove Pantry basket
+    name: PR clean up
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
