--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: PR clean up
+    name: Remove Pantry basket
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -16,5 +16,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Close pr ${{ github.event.number }}
-        run: echo 'close pr ${{ github.event.number }}'
+      - name: Remove Pantry basket of for pr ${{ github.event.number }}
+        run: PR=${{ github.event.number }} npm run cleanup:ci
