--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "ts-etl-ui",
   "version": "0.0.2",
   "type": "module",
+  "main": "server/server.js",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
-    "start": "node server/server.js",
+    "start": "node --env-file=.development.env server/server.js",
+    "start:ci": "node --env-file=.ci.env server/server.js",
+    "cleanup": "node --env-file=.development.env clean-up-pantry-basket.js",
+    "cleanup:ci": "node --env-file=.ci.env clean-up-pantry-basket.js.js",
     "prebuild": "npm --no-git-tag-version version patch",
     "build": "ng build -c development && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
@@ -46,8 +50,8 @@
     "@angular/compiler-cli": "^17.0.3",
     "@angular/material": "^17.0.1",
     "@playwright/test": "^1.44.0",
-    "@types/node": "^20.12.12",
     "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.12.12",
     "@typescript-eslint/eslint-plugin": "^7.9.0",
     "@typescript-eslint/parser": "^7.9.0",
     "autoprefixer": "^10.4.19",
