--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Output Node Version
+        run: node -v
+
+      - name: Output NPM Version
+        run: npm -v
+
       - name: Install dependencies
         run: npm ci
 
