--- a/.github/workflows/pr-cleanup.yml
+++ b/.github/workflows/pr-cleanup.yml
@@ -13,11 +13,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Output Node Version
-        run: node -v
-
-      - name: Output NPM Version
-        run: npm -v
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+            node-version: 20
 
       - name: Install dependencies
         run: npm ci
