--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -9,7 +9,9 @@ concurrency:
 
 jobs:
   e2e-test:
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
+      contents: read
       pages: write
       id-token: write
     name: e2e-test
