--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -9,8 +9,16 @@ concurrency:
 
 jobs:
   e2e-test:
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     name: e2e-test
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     container:
       image: mcr.microsoft.com/playwright:v1.44.0-jammy
 
@@ -36,10 +44,21 @@ jobs:
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} npm run test
 
-      - name: Upload playwright report to Artifacts
-        uses: actions/upload-artifact@v4
+      - name: Setup Pages
         if: always()
+        uses: actions/configure-pages@v4
+
+      - name: Upload playwright report to github-pages
+        if: always()
+        uses: actions/upload-pages-artifact@v3
         with:
-          name: playwright-report
           path: playwright-report/
-          retention-days: 30
+
+      - name: Deploy Playwright result to Github Pages
+        if: always()
+        id: deploy-playwright-to-github
+        uses: actions/deploy-pages@v4
+
+      - name: update job summary
+        if: always()
+        run: echo "# Deployed playwright result to ${{ steps.deploy-playwright-to-github.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
