--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "^17.0.3",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
+    "mongodb": "^6.7.0",
     "node-fetch": "^3.3.2",
     "rxjs": "~7.5.0"
   },
