--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "cwd": "${workspaceRoot}/",
             "runtimeArgs": [
-                "run-script", "start:development"
+                "run-script", "start"
             ],
-            "runtimeExecutable": "npm",
+            "runtimeExecutable": "npm"
         },
         {
             "name": "Angular CLI Server",
@@ -22,7 +22,7 @@
             "runtimeArgs": [
                 "run-script", "serve"
             ],
-            "runtimeExecutable": "npm",
+            "runtimeExecutable": "npm"
         },
         {
             "name": "Debug Playwright Test",
@@ -30,9 +30,9 @@
             "request": "launch",
             "cwd": "${workspaceRoot}/",
             "runtimeArgs": [
-                "run-script", "test:debu"
+                "run-script", "test:debug"
             ],
-            "runtimeExecutable": "npm",
+            "runtimeExecutable": "npm"
         },
     ]
 }
