--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Build Angular
         run: npm run build
 
+      - name: Start Node Server
+        run: npm run start
+
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} MONGO_USERNAME=${{ secrets.MONGO_USERNAME }} MONGO_HOSTNAME=${{ secrets.MONGO_HOSTNAME }} npm run test
 
