--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -45,7 +45,7 @@ jobs:
         run: npm run start &
 
       - name: Run Playwright tests
-        run: PR=${{ github.event.number }} MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} MONGO_USERNAME=${{ secrets.MONGO_USERNAME }} MONGO_HOSTNAME=${{ secrets.MONGO_HOSTNAME }} npm run test
+        run: PR=${{ github.event.number }} npm run test
 
       - name: Setup Pages
         if: always()
