--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "ts-etl-ui",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "main": "server/server.js",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
-    "start": "node --env-file .env server/server.js",
+    "start": "node --env-file .prod.env server/server.js",
+    "start:ci": "node --env-file .ci.env server/server.js",
+    "start:peter": "node --env-file .peter.env server/server.js",
+    "start:christophe": "node --env-file .christophe.env server/server.js",
     "prebuild": "npm --no-git-tag-version version patch",
     "build": "ng build -c development && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
