skip test for CLI command

--- a/angular.json
+++ b/angular.json
@@ -8,7 +8,15 @@
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss",
+          "skipTests": true,
+          "flat": true,
           "changeDetection": "OnPush"
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
         }
       },
       "root": "projects/ts-etl-ui",
