--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "ng build -c development && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
     "test": "playwright test --project=chromium",
-    "test:debug": "playwright test --project=debug",
+    "test:debug": "playwright test --project=chromium --debug",
     "prepare": "husky"
   },
   "private": true,
