--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
 on:
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -42,7 +42,7 @@ jobs:
         run: npm run build
 
       - name: Start Node Server - in background
-        run: PR=${{ github.event.number }} npm run start:ci &
+        run: PR=${{ github.event.number }} RESET_DB=true npm run start:ci &
 
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} npm run test
