--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -41,11 +41,8 @@ jobs:
       - name: Build Angular
         run: npm run build
 
-      - name: Start Node Server - in background
-        run: PR=${{ github.event.number }} RESET_DB=true npm run start:ci &
-
       - name: Run Playwright tests
-        run: PR=${{ github.event.number }} npm run test
+        run: PR=${{ github.event.number }} RESET_DB=true npm run test
 
       - name: Setup Pages
         if: always()
