--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -41,6 +41,9 @@ jobs:
       - name: Build Angular
         run: npm run build
 
+      - name: Reset MongoDb
+        run: PR=${{ github.event.number }} node --env-file .ci.env clean-up-mongo-db-for-pr.js
+
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} RESET_DB=true npm run test
 
