--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm run build
 
       - name: Reset MongoDb
-        run: PR=${{ github.event.number }} node --env-file .ci.env clean-up-mongo-db-for-pr.js
+        run: PR=${{ github.event.number }} node --env-file .ci.env reset-mongo-db.js
 
       - name: Run Playwright tests
         run: PR=${{ github.event.number }} RESET_DB=true npm run test
