--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,14 @@
                   "with": "projects/ts-etl-ui/src/environments/environment.development.ts"
                 }
               ]
+            },
+            "ci": {
+              "fileReplacements": [
+                {
+                  "replace": "projects/ts-etl-ui/src/environments/environment.ts",
+                  "with": "projects/ts-etl-ui/src/environments/environment.ci.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
