--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -67,7 +67,7 @@ jobs:
         run: echo "# Deployed playwright result to ${{ steps.deploy-playwright-to-github.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
 
       - name: Setup JDK
-        uses: actions/setup-java@3
+        uses: actions/setup-java@v4.2.1
 
       - name: Download allure report from previous run
         run: echo 'Download allure report from previous run'
