--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -139,19 +139,19 @@ jobs:
           name: allure-report
           path: all-report/allure-report
 
-      - name: Upload playwright report to github-pages
+      - name: Upload all report to github-pages
         if: always()
         uses: actions/upload-pages-artifact@v3
         with:
           path: all-report
 
-      - name: Deploy Playwright result to Github Pages
+      - name: Deploy all report to Github Pages
         if: always()
-        id: deploy-playwright-to-github
+        id: deploy-all-report-to-github
         uses: actions/deploy-pages@v4
         with:
           preview: true
 
       - name: update job summary
         if: always()
-        run: echo "# Deployed playwright result to ${{ steps.deploy-playwright-to-github.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
+        run: echo "# Deployed all report to ${{ steps.deploy-all-report-to-github.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
