--- a/.github/workflows/pr-e2e.yml
+++ b/.github/workflows/pr-e2e.yml
@@ -130,21 +130,21 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Download playwright html from current run
-        if: always()
+        id: download_playwright_html_report
         uses: actions/download-artifact@v4
         with:
           name: playwright-report
           path: all-report/playwright-report
 
       - name: Download allure report from current run
-        if: always()
+        id: download_allure_report
         uses: actions/download-artifact@v4
         with:
           name: allure-report
           path: all-report/allure-report
 
       - name: Upload all report to github-pages
-        if: always()
+        if: steps.download_playwright_html_report.outcome == 'success' && steps.download_allure_report.outcome == 'success'
         uses: actions/upload-pages-artifact@v3
         with:
           path: all-report
