--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -44,6 +44,17 @@
       "runtimeExecutable": "npm"
     },
     {
+      "name": "Angular CLI Server - integration",
+      "type": "node",
+      "request": "launch",
+      "cwd": "${workspaceRoot}/",
+      "runtimeArgs": [
+        "run-script",
+        "serve:integration"
+      ],
+      "runtimeExecutable": "npm"
+    },
+    {
       "name": "Debug Playwright Test",
       "type": "node",
       "request": "launch",
