--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node --env-file .prod.env server/server.js",
     "start:ci": "node --env-file .ci.env server/server.js",
     "build": "ng build -c development && node insert-commit-hash.js",
+    "build:prod": "ng build -c prod && node insert-commit-hash.js",
     "build:ci": "ng build -c ci && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
     "test": "playwright test --project=chromium",
