--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "file-saver": "^2.0.5",
     "mongodb": "^6.7.0",
     "node-fetch": "^3.3.2",
-    "rxjs": "~7.5.0"
+    "rxjs": "~7.5.0",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^17.0.0",
