--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:ci": "ng build -c ci && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
     "test": "playwright test --project=chromium",
+    "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
     "prepare": "husky"
   },
