--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:ci": "ng build -c ci && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
     "test": "playwright test --project=chromium",
+    "test:smoke": "playwright test --project=debug",
     "test:debug": "playwright test --project=debug --debug",
     "prepare": "husky"
   },
@@ -37,7 +38,8 @@
     "file-saver": "^2.0.5",
     "mongodb": "^6.7.0",
     "node-fetch": "^3.3.2",
-    "rxjs": "~7.5.0"
+    "rxjs": "~7.5.0",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^17.0.0",
