--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
     "mongodb": "^6.7.0",
     "node-fetch": "^3.3.2",
+    "pug": "^3.0.3",
     "rxjs": "~7.5.0",
     "zone.js": "~0.14.0"
   },
