--- a/angular.json
+++ b/angular.json
@@ -105,6 +105,10 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
+            "host": "ts.mlb.nih.gov",
+            "port": 4200,
+            "disableHostCheck": true,
+            "ssl": true,
             "proxyConfig": "projects/ts-etl-ui/src/proxy.conf.json"
           },
           "configurations": {
