--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve:integration": "ng serve -c integration",
     "start": "node --env-file .prod.env server/server.js",
     "start:ci": "node --env-file .ci.env server/server.js",
-    "build": "ng build -c development && node insert-commit-hash.js",
+    "build": "ng build -c render && node insert-commit-hash.js",
     "build:prod": "ng build -c production && node insert-commit-hash.js",
     "build:ci": "ng build -c ci && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
