--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "optimization": false,
+            "extractLicenses": false,
+            "sourceMap": true,
             "outputPath": "dist/ts-etl-ui",
             "index": "projects/ts-etl-ui/src/index.html",
             "browser": "projects/ts-etl-ui/src/main.ts",
@@ -47,7 +50,7 @@
             "scripts": []
           },
           "configurations": {
-            "production": {
+            "prod": {
               "budgets": [
                 {
                   "type": "initial",
@@ -69,9 +72,6 @@
               "outputHashing": "all"
             },
             "render": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true,
               "fileReplacements": [
                 {
                   "replace": "projects/ts-etl-ui/src/environments/environment.ts",
@@ -92,9 +92,6 @@
               "outputHashing": "all"
             },
             "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
             },
             "ci": {
               "fileReplacements": [
@@ -105,7 +102,7 @@
               ]
             }
           },
-          "defaultConfiguration": "production"
+          "defaultConfiguration": "prod"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -113,8 +110,8 @@
             "proxyConfig": "projects/ts-etl-ui/src/proxy.conf.json"
           },
           "configurations": {
-            "production": {
-              "buildTarget": "ts-etl-ui:build:production",
+            "prod": {
+              "buildTarget": "ts-etl-ui:build:prod",
               "proxyConfig": "projects/ts-etl-ui/src/proxy-integration.conf.json"
             },
             "render": {
