--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
+    "serve:prod": "ng serve -c prod",
+    "serve:render": "ng serve -c render",
     "serve:ci": "ng serve -c ci",
     "serve:integration": "ng serve -c integration",
     "start": "node --env-file .prod.env server/server.js",
     "start:ci": "node --env-file .ci.env server/server.js",
     "build": "ng build -c render && node insert-commit-hash.js",
-    "build:prod": "ng build -c production && node insert-commit-hash.js",
+    "build:prod": "ng build -c prod && node insert-commit-hash.js",
     "build:ci": "ng build -c ci && node insert-commit-hash.js",
     "watch": "ng build --watch --configuration development",
     "test": "playwright test --project=chromium",
