--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
+    "jsonwebtoken": "^9.0.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
