--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/router": "^17.0.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "file-saver": "^2.0.5",
@@ -70,6 +71,7 @@
     "eslint": "^8.54.0",
     "husky": "^9.0.11",
     "lodash": "^4.17.21",
+    "ngx-cookie-service": "^17.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.2"
